# real-time-screen-gaze

./: README.rst  setup.cfg
docs/: index.rst
src/pupil_labs/real_time_screen_gaze/: __init__.py  camera_models.py  gaze_mapper.py  marker_generator.py
src/pupil_labs/realtime_screen_gaze/: __init__.py  cloud_api.py  gaze_mapper.py  marker_generator.py
tests/: test_api.py
